2016-03-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: Remove unused function.  Change binary
	plist generation to return NO if our index table needs to grow,
	rather than raising exceptions during normal operation.

2016-03-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	* ANNOUNCE:
	* NEWS:
	* NSTimeZones/NSTimeZones.tar:
	* Tools/AGSParser.m:
	* Version:
	Update version for new release. Add short news/announce entries.
	Update timezone information to latest IANA data.
	Add simple support for generics to autogsdoc.

2016-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Wait longer for locks on slow systems
	Improve tracking of changes in persistent domains.

2016-03-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/GSXML.h:
        * Source/Additions/GSXML.m:
        * Source/GSHTTPURLHandle.m:
        * Source/NSConnection.m:
        * Source/NSDistantObject.m:
        * Source/NSURLHandle.m:
        * Source/NSURLRequest.m:
	Make -setDebug: consistently set/return an integer even if the
	underlying meaning is boolean.  Avoid compiler warnings when
	calling the method on an id and signature is not known.

2016-03-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m:
	* Source/NSTimeZone.m:
	Use NSInteger conmsistently (don't mix with int).

2016-03-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Log if we break the lock.
	* Source/NSDistributedLock.m: Unlock if dealloc'ed while locked.

2016-03-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Remove five year old code for converting
	old style single defaults file to new style (one file per domain).
	Add some thread safety locks for distriobuted locking in case some
	thread issue is causing Riccardo's problem.

2016-03-11	Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSPredicate.h: