@@ -1,3 +1,7 @@
+2016-03-25  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSNumber.m: Attempt to fix endianness archiving issue.
+
 2016-03-23  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSPropertyList.m: Remove unused function.  Change binary
